# api/src/controllers/auth.controller.js
@@ -1,0 +1,7 @@
+const authService = require('../services/auth.service');
+
+async function login(req, res) {
+  res.json(await authService.login(req.body.username, req.body.password));
+}
+
+module.exports = { login };
